@@ -29,6 +29,7 @@ option(GTK3_MIGRATION_CHECKS "Help getting darktable ready for GTK3" OFF)
 option(USE_XMLLINT "Run xmllint to test if darktableconfig.xml is valid" ON)
 option(USE_OPENJPEG "Enable JPEG 2000 support" ON)
 option(USE_WEBP "Enable WebP export support" ON)
+option(BUILD_CMSTEST "Build a test program to check your system's color management setup" OFF)
 if(APPLE)
 	option(USE_MAC_INTEGRATION "Enable OS X integration" ON)
 else(APPLE)
